# Colored-squares

./: .gitignore  CMakeLists.txt  README.md  appicon.rc  main.cpp  main_window.cpp  main_window.h  main_window.ui  resources.qrc  view.cpp  view.h
